--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <div class="container">
     <h1>SDI Services Form</h1>
-    <form action="https://formsubmit.co/43945e1a1d4b20995ca3784f144d2a53" method="POST" class="row g-3 needs-validation">
+    <form action="https://formsubmit.co/sdiservicedbrauagra@gmail.com" method="POST" class="row g-3 needs-validation">
 
       <!-- honeypot -->
       <input type="text" name="_honey" id="honey" style="display: none;">
