--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <div class="container">
     <h1>SDI Services Form</h1>
-    <form action="https://formsubmit.co/sdiservicedbrauagra@gmail.com" method="POST" class="row g-3 needs-validation">
+    <form action="https://formsubmit.co/f399188a4e9ba9573a534dd8fe49be9b" method="POST" class="row g-3 needs-validation">
 
       <!-- honeypot -->
       <input type="text" name="_honey" id="honey" style="display: none;">
