--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <input type="text" name="_honey" id="honey" style="display: none;">
 
       <!-- submitted -->
-      <input type="hidden" name="_next" id="next" value="submit.html">
+<!--       <input type="hidden" name="_next" id="next" value="submit.html"> -->
 
       <!-- new mail -->
       <input type="hidden" name="_subject" value="New form!">
