--- a/index.html
+++ b/index.html
@@ -61,7 +61,10 @@
         <input type="email" class="form-control" id="inputEmail4" name="Email&nbsp;Address" required="">
       </div>
 
-
+      <div class="col-md-6">
+        <label for="documentName" class="form-label">Demand/Required Document Name</label>
+        <input type="text" class="form-control" id="documentName" name="Document&nbsp;Name" required="">
+      </div>
 
       <div class="col-12">
         <button type="submit" class="btn btn-primary">Submit</button>
