--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <!--       <input type="hidden" name="_next" id="next" value="submit.html"> -->
 
       <!-- new mail -->
-      <input type="hidden" name="_subject" value="New form!">
+<!--       <input type="hidden" name="_subject" value="New form!"> -->
 
       <div class="col-md-6">
         <label for="firstname" class="form-label">First Name</label> 
